--- a/app/views/docs/databases.phtml
+++ b/app/views/docs/databases.phtml
@@ -204,6 +204,27 @@ func main() async throws {
 }</code></pre>
         </div>
     </li>
+    <li>
+        <h3>GraphQL</h3>
+        <div class="ide" data-lang="graphql" data-lang-label="GraphQL">
+            <pre class="line-numbers"><code class="prism language-graphql" data-prism>mutation {
+    databasesCreateDocument(
+        databaseId: "[DATABASE_ID]",
+        collectionId: "[COLLECTION_ID]",
+        documentId: "[DOCUMENT_ID]",
+        data: "{}"
+    ) {
+        id
+        collectionId
+        databaseId
+        createdAt
+        updatedAt
+        permissions
+        data
+    }
+}</code></pre>
+        </div>
+    </li>
 </ul>
 
 
@@ -322,6 +343,24 @@ func main() async throws{
         )
     } catch {
         print(error.localizedDescription)
+    }
+}</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>GraphQL</h3>
+        <div class="ide" data-lang="graphql" data-lang-label="GraphQL">
+            <pre class="line-numbers"><code class="prism language-graphql" data-prism>query {
+    databasesListDocuments(
+        databaseId: "[DATABASE_ID]",
+        collectionId: "[COLLECTION_ID]"
+        queries: ["equal(\"title\", [\"Avatar\"])"]
+    ) {
+        total
+        documents {
+            id
+            data
+        }
     }
 }</code></pre>
         </div>
@@ -513,6 +552,24 @@ func main() async throws {
 }</code></pre>
         </div>
     </li>
+    <li>
+        <h3>GraphQL</h3>
+        <div class="ide" data-lang="graphql" data-lang-label="GraphQL">
+            <pre class="line-numbers"><code class="prism language-graphql" data-prism>query {
+    databasesListDocuments(
+        databaseId: "[DATABASE_ID]",
+        collectionId: "[COLLECTION_ID]"
+        queries: ["equal(\"title\", [\"Avatar\", \"Lord of the Rings\"])", "greaterThan(\"year\", 1999)"]
+    ) {
+        total
+        documents {
+            id
+            data
+        }
+    }
+}</code></pre>
+        </div>
+    </li>
 </ul>
 
 <p>When performing a query against multiple attributes, a single index with all query attributes is required. In the example above, a single index with <b>both</b> <span class="tag">title</span> and <span class="tag">year</span> is required.</p>
@@ -655,6 +712,24 @@ func main() async throws {
 }</code></pre>
         </div>
     </li>
+    <li>
+        <h3>GraphQL</h3>
+        <div class="ide" data-lang="graphql" data-lang-label="GraphQL">
+            <pre class="line-numbers"><code class="prism language-graphql" data-prism>query {
+    databasesListDocuments(
+        databaseId: "[DATABASE_ID]",
+        collectionId: "[COLLECTION_ID]"
+        queries: ["orderAsc(\"title\")"]
+    ) {
+        total
+        documents {
+            id
+            data
+        }
+    }
+}</code></pre>
+        </div>
+    </li>
 </ul>
 
 <p>To sort based on multiple attributes, simply provide multiple query methods.</p>
@@ -760,6 +835,24 @@ func main() async throws {
         )
     } catch {
         print(error.localizedDescription)
+    }
+}</code></pre>
+        </div>
+    </li>
+    <li>
+        <h3>GraphQL</h3>
+        <div class="ide" data-lang="graphql" data-lang-label="GraphQL">
+            <pre class="line-numbers"><code class="prism language-graphql" data-prism>query {
+    databasesListDocuments(
+        databaseId: "[DATABASE_ID]",
+        collectionId: "[COLLECTION_ID]"
+        queries: ["orderAsc(\"title\")", "orderDesc(\"year\")"]
+    ) {
+        total
+        documents {
+            id
+            data
+        }
     }
 }</code></pre>
         </div>
