--- a/app/views/docs/index.phtml
+++ b/app/views/docs/index.phtml
@@ -29,19 +29,6 @@ $cols = [
 
                 <ul class="margin-bottom">
                     <!-- <li><a href="/docs/overview">Overview</a></li> -->
-                    <li>
-                        <a href="/docs/installation"><i class="icon-right-dir"></i> Installation</a>
-
-                        <ul class="margin-top-small margin-bottom-small">
-                            <li>&nbsp;&nbsp;<a href="/docs/production" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Production</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/environment-variables" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Env. Variables</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/email-delivery" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Email Delivery</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/sms-delivery" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> SMS Delivery</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/certificates" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Certificates</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/debugging" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Debugging</a></li>
-                            <li>&nbsp;&nbsp;<a href="/docs/upgrade" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Upgrade</a></li>
-                        </ul>
-                    </li>
                     <li><a href="/docs/getting-started-for-web">Appwrite for Web</a></li>
                     <li><a href="/docs/getting-started-for-flutter">Appwrite for Flutter</a></li>
                     <li><a href="/docs/getting-started-for-apple">Appwrite for Apple</a></li>
@@ -56,6 +43,19 @@ $cols = [
                         </ul>
                     </li>
                     <li><a href="/docs/sdks">SDKs</a></li>
+                    <li>
+                        <a href="/docs/installation"><i class="icon-right-dir"></i> Self-Hosting</a>
+
+                        <ul class="margin-top-small margin-bottom-small">
+                            <li>&nbsp;&nbsp;<a href="/docs/production" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Production</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/environment-variables" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Env. Variables</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/email-delivery" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Email Delivery</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/sms-delivery" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> SMS Delivery</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/certificates" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Certificates</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/debugging" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Debugging</a></li>
+                            <li>&nbsp;&nbsp;<a href="/docs/upgrade" data-selected="/docs/installation"><i class="icon-angle-circled-right margin-start-negative-tiny margin-end-tiny"></i> Upgrade</a></li>
+                        </ul>
+                    </li>
                 </ul>
 
                 <div class="margin-bottom-small">
