Update url -> route class

--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -298,7 +298,7 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                     </h2>
 
                     <div>
-                        <div class="url margin-bottom">
+                        <div class="route margin-bottom">
                             <span class="method <?php echo $this->escape($method); ?>"><?php echo strtoupper($this->escape($method)); ?></span><span class="endpoint"><?php //echo $this->escape($endpoint); ?></span><span class="path">/v1<?php echo $this->escape($url); ?></span>
                         </div>
 
