Add seperator between SDK an non-SDK languages

--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -142,30 +142,66 @@ $paramSDK = (!empty($sdk)) ? '?sdk='.$sdk : '';
                     <?php echo $this->escape(ucfirst($family)); ?> integration with &nbsp;
                     <select class="choose-platform" name="URL">
                         <?php foreach ($platforms as $key => $platform): ?>
-                            <?php foreach ($platform['languages'] as $language):
-                                if(!$language['enabled']) {
-                                    continue;
-                                }
+                            <?php
+                                $sdkLanguages = \array_filter($platform['languages'], function ($language) use ($family) {
+                                    return $language['isSDK'] ?? true;
+                                });
+                                $exampleLanguages = \array_filter($platform['languages'], function ($language) use ($family) {
+                                    return !($language['isSDK'] ?? true);
+                                });
 
-                                if(!isset($language['family']) || $language['family'] !== $family) {
-                                    continue;
-                                }
+                                function skipLanguage($language, $family): bool {
+                                    if(!$language['enabled']) {
+                                        return true;
+                                    }
 
-                                if($language['dev']) {
+                                    if(!isset($language['family']) || $language['family'] !== $family) {
+                                        return true;
+                                    }
+
+                                    if($language['dev']) {
+                                        return true;
+                                    }
+
+                                    return false;
+                                }
+                            ?>
+                            <?php foreach ($sdkLanguages as $language):
+                                if (skipLanguage($language, $family)) {
                                     continue;
                                 }
 
                                 $key = (isset($language['key'])) ? $language['key'] : '';
                                 $name = (isset($language['name'])) ? $language['name'] : '';
                                 $beta = (isset($language['beta'])) ? $language['beta'] : false;
-                                $isSDK = (isset($language['isSDK'])) ? $language['isSDK'] : true;
+                                $docDirectories = (isset($language['docDirectories']))
+                                    ? $language['docDirectories']
+                                    : ['Default' => 'examples'];
+                                ?>
+                                <?php foreach ($docDirectories as $docDirectoryKey => $docDirectory): ?>
+                                    <option data-ls-attrs="value=/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>?sdk=<?php echo $this->escape($key); ?>-<?php echo $this->escape(strtolower($docDirectoryKey)); ?>{{router.hash}}" <?php echo (($key . '-' . strtolower($docDirectoryKey)) === $sdk) ? ' selected' : ''; ?>>
+                                        <?php echo $this->escape($name); ?>SDK <?php if(count($docDirectories) > 1): ?>(<?php echo $docDirectoryKey; ?> examples)<?php endif; ?>
+                                    </option>
+                                <?php endforeach; ?>
+                            <?php endforeach; ?>
+
+                            <option disabled>──────────</option>
+
+                            <?php foreach ($exampleLanguages as $language):
+                                if (skipLanguage($language, $family)) {
+                                    continue;
+                                }
+
+                                $key = (isset($language['key'])) ? $language['key'] : '';
+                                $name = (isset($language['name'])) ? $language['name'] : '';
+                                $beta = (isset($language['beta'])) ? $language['beta'] : false;
                                 $docDirectories = (isset($language['docDirectories']))
                                     ? $language['docDirectories']
                                     : ['Default' => 'examples'];
                                 ?>
                                 <?php foreach ($docDirectories as $docDirectoryKey => $docDirectory): ?>
                                 <option data-ls-attrs="value=/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>?sdk=<?php echo $this->escape($key); ?>-<?php echo $this->escape(strtolower($docDirectoryKey)); ?>{{router.hash}}" <?php echo (($key . '-' . strtolower($docDirectoryKey)) === $sdk) ? ' selected' : ''; ?>>
-                                    <?php echo $this->escape($name); ?><?php if ($isSDK): ?> SDK <?php endif ?><?php if(count($docDirectories) > 1): ?>(<?php echo $docDirectoryKey; ?> examples)<?php endif; ?>
+                                    <?php echo $this->escape($name); ?> <?php if(count($docDirectories) > 1): ?>(<?php echo $docDirectoryKey; ?> examples)<?php endif; ?>
                                 </option>
                             <?php endforeach; ?>
                             <?php endforeach; ?>
