Fix extra dividers

--- a/app/views/docs/service.phtml
+++ b/app/views/docs/service.phtml
@@ -41,15 +41,12 @@ function skipLanguage($language, $family): bool {
     if(!$language['enabled']) {
         return true;
     }
-
     if(!isset($language['family']) || $language['family'] !== $family) {
         return true;
     }
-
     if($language['dev']) {
         return true;
     }
-
     return false;
 }
 ?>
@@ -180,12 +177,14 @@ function skipLanguage($language, $family): bool {
                                 ?>
                                 <?php foreach ($docDirectories as $docDirectoryKey => $docDirectory): ?>
                                     <option data-ls-attrs="value=/docs/<?php echo $this->escape($family); ?>/<?php echo $serviceName; ?>?sdk=<?php echo $this->escape($key); ?>-<?php echo $this->escape(strtolower($docDirectoryKey)); ?>{{router.hash}}" <?php echo (($key . '-' . strtolower($docDirectoryKey)) === $sdk) ? ' selected' : ''; ?>>
-                                        <?php echo $this->escape($name); ?>SDK <?php if(count($docDirectories) > 1): ?>(<?php echo $docDirectoryKey; ?> examples)<?php endif; ?>
+                                        <?php echo $this->escape($name); ?> SDK <?php if(count($docDirectories) > 1): ?>(<?php echo $docDirectoryKey; ?> examples)<?php endif; ?>
                                     </option>
                                 <?php endforeach; ?>
                             <?php endforeach; ?>
 
-                            <option disabled>──────────</option>
+                            <?php if (!skipLanguage($language, $family)): ?>
+                                <option disabled>──────────</option>
+                            <?php endif; ?>
 
                             <?php foreach ($exampleLanguages as $language):
                                 if (skipLanguage($language, $family)) {
