--- a/app/views/docs/storage.phtml
+++ b/app/views/docs/storage.phtml
@@ -157,21 +157,29 @@ func main() async throws {
     <li>
         <h3>GraphQL</h3>
         <div class="ide" data-lang="http" data-lang-label="HTTP">
-            <pre class="line-numbers"><code class="prism language-http" data-prism>--------------------------cec8e8123c05ba25
+            <pre class="line-numbers"><code class="prism language-http" data-prism>POST /v1/storage/buckets/{bucketId}/files HTTP/1.1
+Host: HOSTNAME
+Content-Type: multipart/form-data; boundary="cec8e8123c05ba25"
+X-Appwrite-Response-Format: 1.0.0
+X-Appwrite-Project: 5df5acd0d48c2
+X-Appwrite-JWT: eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJ...
+Content-Length: *Length of your entity body in bytes*
+
+--cec8e8123c05ba25
 Content-Disposition: form-data; name="operations"
 
 { "query": "mutation { storageCreateFile(bucketId: $bucketId, fileId: $fileId, file: $file) { id }" }, "variables": { "bucketId": "[BUCKET_ID]", "fileId": "[FILE_ID]", "file": null } }
---------------------------cec8e8123c05ba25
+--cec8e8123c05ba25
 Content-Disposition: form-data; name="map"
 
 { "0": ["variables.file"] }
---------------------------cec8e8123c05ba25
+--cec8e8123c05ba25
 Content-Disposition: form-data; name="0"; filename="a.txt"
 Content-Type: text/plain
 
 Alpha file content.
 
---------------------------cec8e8123c05ba25--</code></pre>
+--cec8e8123c05ba25--</code></pre>
         </div>
     </li>
 </ul>
