Content changes following review comments

--- a/app/views/docs/admin.phtml
+++ b/app/views/docs/admin.phtml
@@ -1,4 +1,4 @@
-<p>You can use Appwrite to build both client and server integrations. Client integrations are for frontend and mobile applications, which use Appwrite's Client APIs and <a href="/docs/sdks#client">Client SDKs</a>. Server integrations are for backend and CLI applications, which use Appwrite's Server APIs and <a href="/docs/sdks#server">Server SDKs.</a></p>
+<p>You can use Appwrite to build both client and server integrations. Client integrations are for frontend and mobile applications, which use Appwrite's Client APIs and <a href="/docs/sdks#client">Client SDKs</a>. Server integrations, including the Appwrite CLI, are for backend and CLI applications which use Appwrite's Server APIs and <a href="/docs/sdks#server">Server SDKs.</a></p>
 
 <p>When building client integrations with the Client SDKs, you authenticate with an account and operate in the scope of the account. This means Client SDKs can only access resources that your account has been granted permission to access.</p>
 
