--- a/app/views/docs/models.phtml
+++ b/app/views/docs/models.phtml
@@ -1,19 +1,8 @@
 <?php
-use League\CommonMark\Environment\Environment;
-use League\CommonMark\Extension\CommonMark\CommonMarkCoreExtension;
-use League\CommonMark\Extension\GithubFlavoredMarkdownExtension;
-use League\CommonMark\MarkdownConverter;
-
 $models = $this->getParam('models', []);
 $model = $this->getParam('model', null);
+$markdown = $this->getParam('markdown', false);
 $rules = $model['properties'] ?? [];
-
-$environment = new Environment(['html_input' => 'escape']);
-
-$environment->addExtension(new CommonMarkCoreExtension());
-$environment->addExtension(new GithubFlavoredMarkdownExtension());
-
-$markdown = new MarkdownConverter($environment);
 
 $example = function ($model, $models) use (&$example)
 {
