--- a/app/views/docs/sdks.phtml
+++ b/app/views/docs/sdks.phtml
@@ -1,17 +1,7 @@
 <?php
-use League\CommonMark\Environment\Environment;
-use League\CommonMark\Extension\CommonMark\CommonMarkCoreExtension;
-use League\CommonMark\Extension\GithubFlavoredMarkdownExtension;
-use League\CommonMark\MarkdownConverter;
 
 $platforms = $this->getParam('platforms', []);
-
-$environment = new Environment(['html_input' => 'escape']);
-
-$environment->addExtension(new CommonMarkCoreExtension());
-$environment->addExtension(new GithubFlavoredMarkdownExtension());
-
-$markdown = new MarkdownConverter($environment);
+$markdown = $this->getParam('markdown', false);
 
 ?>
 
